--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
     width: 100%;
     height: 100%;
     max-width: 480px;
-    min-width: 400px;
+    min-width: 480px;
     margin: 0;
     padding: 0;
   }
@@ -313,6 +313,8 @@ nav a {
 
   .exp-color {
     height: 1160px;
+    min-width: 480px;
+    max-width: 480px;
   }
 
   .exp {
