--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ nav a {
     width: 100%;
     padding: 20px;
     max-width: 480px;
-    min-width: 475px;
+    min-width: 480px;
     margin: auto;
   }
 }
@@ -225,6 +225,7 @@ nav a {
   .home {
     width: 100%;
     height: 600px;
+    max-width: 480px;
     min-width: 480px;
     display: flex;
   }
