--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,15 @@ body {
 }
 
 @media (max-width: 480px) {
+  body {
+    max-width: 480px;
+    min-width: 480px;
+  }
   .container {
     width: 100%;
     height: 100%;
     max-width: 480px;
-    min-width: 400px;
+    min-width: 480px;
     margin: 0;
     padding: 0;
   }
@@ -141,7 +145,7 @@ nav a {
     width: 100%;
     padding: 20px;
     max-width: 480px;
-    min-width: 400px;
+    min-width: 480px;
     margin: auto;
   }
 }
@@ -226,7 +230,7 @@ nav a {
     width: 100%;
     height: 600px;
     max-width: 480px;
-    min-width: 400px;
+    min-width: 480px;
     display: flex;
   }
 
@@ -314,7 +318,7 @@ nav a {
 
   .exp-color {
     height: 1160px;
-    min-width: 400px;
+    min-width: 480px;
     max-width: 480px;
   }
 
